# cookbook-api

./: .flake8  .isort.cfg  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_main.py
